Добавлена реляционная БД PostgreSQL и реализованы новые сущности
- Подключена реляционная БД PostgreSQL
- Добавлены сущности: Quiz, Question, Answer, User, QuizAttempt, UserAnswer, Tag
- Реализована связь ManyToMany между Quiz и Tag
- Реализована связь OneToMany между Quiz и Question, Question и Answer
- Добавлены CRUD операции для Quiz и Tag
- Реализованы методы с @Transactional для демонстрации атомарности
- Добавлено решение проблемы N+1 через @EntityGraph
- Настроены CascadeType и FetchType